# Classification-of-road-signs

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  commands.py  pyproject.toml
.dvc/: config
.hydra/: hydra.yaml
configs/: config.yaml  model.yaml
configs/data/: data.yaml
configs/mlflow/: mlflow.yaml
configs/trainer/: trainer.yaml
configs/transforms/: transforms.yaml
data/data_train/: Meta.csv.dvc  Meta.dvc  Test.csv.dvc  Test.dvc  Train.csv.dvc  Train.dvc
models/: gtsrb_model.ckpt.dvc
outputs/2025-01-04/23-32-41/.hydra/: hydra.yaml
outputs/2025-01-04/23-35-34/.hydra/: hydra.yaml
outputs/2025-01-04/23-36-21/.hydra/: hydra.yaml
outputs/2025-01-04/23-39-48/.hydra/: config.yaml  hydra.yaml
outputs/2025-01-04/23-41-58/.hydra/: config.yaml  hydra.yaml
outputs/2025-01-04/23-44-21/.hydra/: hydra.yaml
outputs/2025-01-04/23-45-43/.hydra/: config.yaml  hydra.yaml
outputs/2025-01-04/23-46-55/.hydra/: hydra.yaml
sign_recognizer/: constants.py  dataset.py  infer.py  model.py  test.py  train.py  trainer.py
sign_recognizer/utils/: compose_builder.py
